@@ -40,6 +40,7 @@
       <param-value>org.eclipse.scout.rt.rest.RestApplication</param-value>
     </init-param>
     <load-on-startup>1</load-on-startup>
+    <async-supported>true</async-supported>
   </servlet>
 
   <servlet-mapping>
@@ -55,6 +56,7 @@
   <filter>
     <filter-name>GzipServletFilter</filter-name>
     <filter-class>org.eclipse.scout.rt.server.commons.servlet.filter.gzip.GzipServletFilter</filter-class>
+    <async-supported>true</async-supported>
   </filter>
 
   <filter-mapping>
@@ -65,6 +67,7 @@
   <filter>
     <filter-name>HttpRunContextFilter</filter-name>
     <filter-class>org.eclipse.scout.rt.server.commons.context.HttpRunContextFilter</filter-class>
+    <async-supported>true</async-supported>
   </filter>
 
   <filter-mapping>
